<resources>
    <string name="app_name">TouchonScreen</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button0">0</string>
    <string name="clear">CLEAR</string>
    <string name="delete">DELETE</string>
    <string name="send">SEND</string>
    <string name="next">NEXT</string>
    <string name="pleaseinput">인증번호를 입력하세요</string>
    <string name="coord">"Send Coordinate</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Sign In -->
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="signin_email">로그인</string>
    <string name="register_email">회원가입</string>
    <string name="non_members">비회원(인증번호)</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="device_1">PC 1</string>
    <string name="device_2">PC 2</string>
    <string name="append_dv">+</string>
    <string name="dvl_title">등록된 기기</string>

    <string name="x_coord">X 좌표</string>
    <string name="y_coord">Y 좌표</string>
    <string name="gesture_mode">제스처</string>
    <string name="send_coord">좌표 전송</string>
</resources>
