<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitStart"
        android:layout_above="@id/kyu_layout"
        android:layout_alignParentTop="true"
        android:src="@drawable/tos_name" />

    <LinearLayout
        android:id="@+id/kyu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="188dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">


            <EditText
                android:id="@+id/gesture_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/gesture_mode" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/x_coord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/x_coord" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/y_coord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/y_coord" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/send_coord"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/button_state"
            android:text="@string/send_coord"
            android:theme="@style/ButtonStyle" />

    </LinearLayout>
</RelativeLayout>